--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activities.ScanDevicesActivity"></activity>
+        <activity android:name=".utils.ConnectDevice"></activity>
     </application>
 
 </manifest>
